_includes/css/agency.css
/* ... */
.navbar-default .navbar-nav>.active>a {
    border-radius: 0;
    color: #fff;
    background-color: #{{ site.color.primary }};
}

.navbar-default .navbar-nav>.active>a:hover,
.navbar-default .navbar-nav>.active>a:focus {
    color: #fff;
    background-color: #{{ site.color.secondary }};
}

@media(min-width:320px) {
    .navbar {
        padding-right: 0px;
        margin-right: 0px;
    }
    .navbar-nav {
        background-color: grey;
    }
    .navbar-default {
        padding: 20px 0;
        border: 0;
        background-color: transparent;
        -webkit-transition: padding .3s;
        -moz-transition: padding .3s;
        transition: padding .3s;
    }

    .navbar-default .navbar-brand {
        padding: 20px;
        font-size: 2em;
        -webkit-transition: all .3s;
        -moz-transition: all .3s;
        transition: all .3s;
    }

    .navbar-default .navbar-nav>.active>a {
        border-radius: 3px;
    }

    .navbar-default.navbar-shrink {
        padding: 0px 0;
        background-color: #222;
        height: 60px;
    }

    .navbar-default.navbar-shrink .navbar-brand {
        font-size: 1.5em;
    }
}

@media(min-width:768px) {
    .navbar-default {
        padding: 25px 0;
        border: 0;
        background-color: transparent;
        -webkit-transition: padding .3s;
        -moz-transition: padding .3s;
        transition: padding .3s;
    }
    .navbar-nav {
        background-color: none;
    }
    .navbar-default .navbar-brand {
        font-size: 2em;
        -webkit-transition: all .3s;
        -moz-transition: all .3s;
        transition: all .3s;
    }

    .navbar-default .navbar-nav>.active>a {
        border-radius: 3px;
    }

    .navbar-default.navbar-shrink {
        padding: 10px 0;
        background-color: #222;
        height: 60px;
    }

    .navbar-default.navbar-shrink .navbar-brand {
        font-size: 1.5em;
    }
}

header {
    text-align: center;
    color: #fff;
    background-attachment: scroll;
    background: linear-gradient(rgba(0, 0, 0, 0.13), rgba(0, 0, 0, 0.13));
    background-position: center center;
    background-repeat: none;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    background-size: cover;
    -o-background-size: cover;
    height: 100vh;
}

header .intro-text {
    padding-top: 175px;
    padding-bottom: 50px;
}

header .intro-text .intro-lead-in {
    margin-bottom: 25px;
    font-family: "Droid Serif", "Helvetica Neue",Helvetica, sans-serif;
    font-size: 22px;
    font-style: italic;
    line-height: 22px;
}

header .intro-text .intro-heading {
    margin-bottom: 50px;
    text-transform: uppercase;
    font-family: Proxima Nova,"Helvetica Neue",Helvetica, sans-serif;
    font-size: 50px;
    font-weight: 700;
    line-height: 50px;
}

header .social-networks {
    height: 75px;
    margin-bottom: 50px;
}

header ul.social-buttons li a {
    display: block;
    width: 40px;
    height: 40px;
    border-radius: 100%;
    font-size: 20px;
    line-height: 40px;
    outline: 0;
    color: #fff;
    background-color: rgba(0,0,0,0);
    -webkit-transition: all .3s;
    -moz-transition: all .3s;
    transition: all .3s;
}

header .video {
    z-index: -1;
    position: absolute;
    height: 100%;
    width: 100%;
    overflow: hidden;
}

header .video video {
    min-width: 100%;
    min-height: 100%;
    background-size: cover;
}

header .intro-image {
    margin-bottom: 10px;
}

header .intro-image img {
    width: 100px;
    border-radius: 50px;
    -webkit-border-radius: 50px;
    -moz-border-radius: 50px;
}

/* iPhone 6*/
/* Portrait*/
@media (min-width: 320px) {

    header .intro-text {
        padding-top: 25px;
        padding-bottom: 50px;
    }

    header .intro-text .intro-heading {
        margin-top: 100px;
        margin-bottom: 50px;
        text-transform: uppercase;
        font-family: "Helvetica Neue",Helvetica, sans-serif;
        font-size: 40px;
        font-weight: 700;
        line-height: 75px;
        margin-bottom: 25px;
    }

    header .intro-text .intro-lead-in {
        font-family: "Droid Serif","Helvetica Neue",Helvetica, sans-serif;
        font-size: 16px;
        font-style: normal;
        line-height: 22px;
    }

    header .video {
        z-index: -1;
        position: absolute;
        height: 100%;
        width: 100%;
        overflow: hidden;
    }

    header .video video {
        min-width: 100%;
        min-height: 100%;
        background-size: cover;
    }

    header .intro-text .page-scroll {
        max-width: 320px;
    }
    header .btn-xl {
        padding: 10px 20px;
        font-size: 16px;
    }
}

@media(min-width:768px) {
    header .intro-text {
        padding-top: 175px;
        padding-bottom: 75px;
    }

    header .intro-text .intro-heading {
        margin-top: 200px;
        margin-bottom: 50px;
        text-transform: uppercase;
        font-family: "Helvetica Neue",Helvetica, sans-serif;
        font-size: 75px;
        font-weight: 700;
        line-height: 75px;
        margin-bottom: 25px;
    }

    header .intro-text .intro-lead-in {
        font-family: "Droid Serif","Helvetica Neue",Helvetica, sans-serif;
        font-size: 20px;
        font-style: normal;
        line-height: 40px;
    }
}

section {
    padding: 100px 0;
}

section h2.section-heading {
    margin-top: 0;
    margin-bottom: 15px;
    font-size: 40px;
}

section h3.section-subheading {
    margin-bottom: 75px;
    text-transform: none;
    font-family: "Droid Serif","Helvetica Neue",Helvetica,Arial,sans-serif;
    font-size: 20px;
    font-style: italic;
    font-weight: 400;
}

section h3.section-subheading.sub {
    margin-bottom: 25px;
    text-transform: none;
    font-family: "Droid Serif","Helvetica Neue",Helvetica,Arial,sans-serif;
    font-size: 20px;
    font-style: italic;
    font-weight: 400;
}
/* ... */

